Search in online GAL when OAB is misconfigured
I try to find email addresses of people via the Global Address List. But is does not work.
I see this in the logging:
Oct 05 15:20:25 nyx goa-daemon[3845]: goa_ews_client_autodiscover() failed: 404 — Not Found
Using:
evolution-ews.x86_64 3.48.2-1.fc38 @updates
Edited by Jan Vlug