I#246 - Search in online GAL when OAB is misconfigured

Closes https://gitlab.gnome.org/GNOME/evolution-ews/-/issues/246